# zip-archiver

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.yaml
src/zip_archiver/: __init__.py  archiver.py  config.py  date_resolver.py  models.py  planner.py  scanner.py
tests/: test_archiver.py  test_config.py  test_date_resolver.py  test_planner.py  test_scanner.py
