[project]
name = "zip-archiver"
version = "0.1.0"
description = "Archive files from previous years into ZIP archives."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zip_archiver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
